# 4w_4d

./: README.md  map.pgm  map.yaml
src/manda_description/: CMakeLists.txt  package.xml
src/manda_description/config/: display.rviz  fwids_controllers_ros2.yaml  mapper_params_online_async.yaml  nav2_params.yaml  slam.rviz
src/manda_description/control/mppi_h/: CMakeLists.txt  package.xml
src/manda_description/control/mppi_h/config/: mppi_h.yaml
src/manda_description/control/mppi_h/include/mppi_h/: mppi_h.hpp
src/manda_description/control/mppi_h/launch/: mppi_h.launch.py
src/manda_description/control/mppi_h/src/: mppi_h.cpp  mppi_h_node.cpp
src/manda_description/control/mppi_h/src/mode1_mppi_3d/: mppi_3d_core.cpp
src/manda_description/control/mppi_h/src/mode2_mppi_4d/: mppi_4d_core.cpp
src/manda_description/launch/: display_robot.launch.py  gazebo_robot.launch.py  nav2_launch.py  slam_launch.py
src/manda_description/scripts/: fwids_kinematic_controller.py  odom_tf_publisher.py  test_all_wheels.py
src/manda_description/urdf/: fwids_vehicle.urdf  fwids_vehicle.xacro
src/manda_description/worlds/: empty.world  obstacle.world
