<?xml version="1.0"?>
<package format="3">
  <name>mppi_h</name>
  <version>0.0.0</version>
  <description>MPPI-H hybrid controller for 4WIDS vehicle</description>
  <maintainer email="mizuhoaoki1998@gmail.com">Mizuho Aoki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>mppi_eval_msgs</depend>

  <build_depend>eigen3_cmake_module</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>